--- a/index.css
+++ b/index.css
@@ -50,7 +50,11 @@ body{
 
 /*tabulation customization*/
 #tabs{
-  background-image: url("images/background.jpg");;
+  background-image: url("images/background.jpg");
+  width: 500px;
+  height: 520px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ui-tabs .ui-tabs-nav
